# Clue

./: Cargo.toml
.github/workflows/: build.yml
bindings/: Cargo.toml  build.rs  clue.h  example.c
bindings/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs  threads.rs
core/: Cargo.toml
core/benches/: bench.rs
core/src/: compiler.rs  error.rs  lib.rs  parser.rs  preprocessor.rs  scanner.rs
