[package]
name = "clue_bindings"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
clue_core = { path = "../core" }
